fix contrast errors

--- a/src/index.scss
+++ b/src/index.scss
@@ -26,12 +26,12 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  color: $custom-dark;
+  color: $dark;
 }
 
 a {
   font-weight: 500;
-  color: $custom-dark;
+  color: $dark;
   text-decoration: inherit;
 }
 
