--- a/src/styles/_variables_overrides.scss
+++ b/src/styles/_variables_overrides.scss
@@ -11,7 +11,7 @@ $tertiary: #F2B705;
 $tertiary-light: #FFD24A;
 $tertiary-dark: #C89200;
 
-$dark : #2B2B2B ;
+$dark : #222222 ;
 $light : #F8F9FB;
 
 $customDark: #2B2B2B;
