--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -17,7 +17,7 @@ body {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color: $customDark;
+  color: $dark;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -63,7 +63,7 @@ a:hover {
 
 h2 {
     text-decoration: underline $dark;
-    color: $customDark;
+    color: $dark;
 }
 
 .card {
